BCOP-2019 Resolve deployment bug/style in QA deployment
Squashed commit of the following:

commit e446327bc5bbe5b602d93c61f542c6bcc79ff667
Author: jhayes <jhayes@CAD-PA-JHAYES>
Date:   Wed Nov 15 10:31:41 2017 -0500

    resolve style issues in deployment, search clear button, grid-header sort pointer

commit 6586ce85ab75419048fab3a409bf29dd4df38577
Author: jhayes <jhayes@CAD-PA-JHAYES>
Date:   Wed Nov 15 09:55:11 2017 -0500

    resolve context menu height bug in deloyment

commit e04d8e0b6e4bcd11cbe4a17bf7194a2a17feadb9
Merge: 9456d21 04ba6b0
Author: jhayes <jhayes@CAD-PA-JHAYES>
Date:   Wed Nov 15 09:41:22 2017 -0500

    Merge branch 'develop' of http://devvm01tfs03:8080/tfs/CMWPA/CMW%20Git/_git/Broadcast into feature/BCOP2019

commit 9456d21b837f669356cfb5fb10b04e9a5a4d5cb6
Author: jhayes <jhayes@CAD-PA-JHAYES>
Date:   Tue Nov 14 20:51:09 2017 -0500

    Loading on grid SET_DATA

commit 9bc62ab15e1c7295109577adb98b24f100a32ccd
Merge: e8a4226 3b38170
Author: jhayes <jhayes@CAD-PA-JHAYES>
Date:   Tue Nov 14 20:47:18 2017 -0500

    Merge branch 'develop' of http://devvm01tfs03:8080/tfs/CMWPA/CMW%20Git/_git/Broadcast into feature/BCOP2019

commit e8a4226fd06dea8a74afd9d5d8c7f203b4335390
Author: jhayes <jhayes@CAD-PA-JHAYES>
Date:   Tue Nov 14 20:47:00 2017 -0500

    Procesing on grid SET_DATA

commit db56c9feaed77a6c32923a37ef62ba0a24bc6e22
Author: jhayes <jhayes@CAD-PA-JHAYES>
Date:   Tue Nov 14 19:57:23 2017 -0500

    polyfill Element.closest for IE

--- a/Source/Tam/Maestro/UI/BroadcastComposerWebUI/src/styles/grid/_reset.scss
+++ b/Source/Tam/Maestro/UI/BroadcastComposerWebUI/src/styles/grid/_reset.scss
@@ -21,6 +21,7 @@
     box-shadow: 0px 1px 4px #dddddd;
     border-bottom: none !important;
     box-sizing: border-box !important;
+    cursor: pointer !important;
   
     tr {
       border: none !important;
@@ -172,6 +173,7 @@
   }
 
   .react-grid-action-menu-container {
+    top: auto !important;
     box-shadow: 1px 2px 10px rgba(0,0,0,0.20) !important;
     border: 2px solid #c5c5c5 !important;
     right: 18px !important;
@@ -185,7 +187,7 @@
 
   .react-grid-top {
     .react-grid-action-menu-container {
-      bottom: -24px !important;
+      bottom: -14px !important;
       // right: -6px !important;
     }
   }
