--- a/Source/Tam/Maestro/UI/BroadcastComposerWebUI/src/styles/grid/_search.scss
+++ b/Source/Tam/Maestro/UI/BroadcastComposerWebUI/src/styles/grid/_search.scss
@@ -2,9 +2,9 @@
 	width: auto;
 
 	.search-input-clear-btn {
-		margin-left: -34px;
+		margin-left: -37px;
 		z-index: 2;
-		color: #c5c5c5;
+		color: #808080;
 
 		span {
 			padding-top: 2px;
